[gd_scene load_steps=14 format=3 uid="uid://c5mpm8cldknfk"]

[ext_resource type="Script" path="res://Units/shooter_units/shooter_unit.gd" id="1_i4j21"]
[ext_resource type="Texture2D" uid="uid://ch2v2c6l7ume" path="res://Units/unit_body.png" id="2_up1jy"]
[ext_resource type="Texture2D" uid="uid://betvqvc8rlol0" path="res://Units/unit_head.png" id="3_aecky"]
[ext_resource type="Texture2D" uid="uid://b7t4txf8yfes2" path="res://Units/shooter_units/shooter_weapons/shooter_weapon_5.png" id="4_3fh5p"]
[ext_resource type="PackedScene" uid="uid://b66twah3ba66x" path="res://Units/Usables/health_bar.tscn" id="5_5il0a"]
[ext_resource type="PackedScene" uid="uid://chuhcfppmw1dd" path="res://Units/Usables/other_animation.tscn" id="6_rubbt"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_jvusy"]
friction = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_71o7e"]
radius = 31.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qsy6v"]
radius = 56.0089

[sub_resource type="CircleShape2D" id="CircleShape2D_ibbyr"]
radius = 200.0

[sub_resource type="Animation" id="Animation_osy6d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Side/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, 7)]
}

[sub_resource type="Animation" id="Animation_eu0j8"]
resource_name = "shoot"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Side/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(15, 7), Vector2(10, 7), Vector2(15, 7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7yia0"]
_data = {
"RESET": SubResource("Animation_osy6d"),
"shoot": SubResource("Animation_eu0j8")
}

[node name="ShooterUnitRigid" type="RigidBody2D"]
z_index = 3
mass = 50.0
physics_material_override = SubResource("PhysicsMaterial_jvusy")
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_i4j21")

[node name="Side" type="Sprite2D" parent="."]
metadata/_edit_lock_ = true

[node name="Body" type="Sprite2D" parent="Side"]
position = Vector2(0, 19)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_up1jy")

[node name="Head" type="Sprite2D" parent="Side"]
position = Vector2(0, -30)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_aecky")

[node name="Hand" type="Sprite2D" parent="Side"]
position = Vector2(15, 7)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_3fh5p")

[node name="UnitSpace" type="CollisionShape2D" parent="."]
position = Vector2(0, 24)
rotation = 1.5708
shape = SubResource("CircleShape2D_71o7e")

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 0
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_qsy6v")
debug_color = Color(0.909804, 0.266667, 0.356863, 0.219608)
metadata/_edit_lock_ = true

[node name="ShotBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShotBox"]
shape = SubResource("CircleShape2D_ibbyr")
debug_color = Color(0, 0.647059, 0.231373, 0.12549)
metadata/_edit_lock_ = true

[node name="Reload" type="Timer" parent="."]
one_shot = true

[node name="Aiming" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource("5_5il0a")]
offset_left = -27.0
offset_top = -73.0
offset_right = 81.0
offset_bottom = -43.0

[node name="HandAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7yia0")
}

[node name="OtherAnimation" parent="." instance=ExtResource("6_rubbt")]

[connection signal="area_entered" from="ShotBox" to="." method="_on_shot_box_area_entered"]
[connection signal="area_exited" from="ShotBox" to="." method="_on_shot_box_area_exited"]
[connection signal="timeout" from="Reload" to="." method="_on_reload_timeout"]
[connection signal="timeout" from="Aiming" to="." method="_on_aiming_timeout"]
